@@ -1,6 +1,6 @@
 Package: mia
 Type: Package
-Version: 1.13.34
+Version: 1.13.35
 Authors@R:
     c(person(given = "Felix G.M.", family = "Ernst", role = c("aut"),
              email = "felix.gm.ernst@outlook.com",
@@ -89,7 +89,8 @@ Suggests:
     rmarkdown,
     rhdf5,
     topicmodels,
-    topicdoc
+    topicdoc,
+    nmf
 URL: https://github.com/microbiome/mia
 BugReports: https://github.com/microbiome/mia/issues
 Roxygen: list(markdown = TRUE)
